# agents-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/agents_manager_cli/: Cargo.toml
crates/agents_manager_cli/src/: main.rs
crates/agents_manager_core/: Cargo.toml
crates/agents_manager_core/src/: apply.rs  config.rs  core_tests.rs  creation.rs  doctor.rs  error.rs  git_import.rs  init_project.rs  lib.rs  library.rs  mcp.rs  memory.rs  migration.rs  profile.rs  registry.rs  settings.rs  targets.rs
crates/agents_manager_desktop/: index.html  package-lock.json  package.json  vite.config.js
crates/agents_manager_desktop/scripts/: macos-package.mjs  macos-package.test.mjs
crates/agents_manager_desktop/src/: capabilities.test.js  icon-assets.test.js  main.js  styles.css  (+2 more)
crates/agents_manager_desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
crates/agents_manager_desktop/src-tauri/.codex/skills/: skill-creator
crates/agents_manager_desktop/src-tauri/capabilities/: default.json
crates/agents_manager_desktop/src-tauri/icons/: icon.icns
crates/agents_manager_desktop/src-tauri/src/: main.rs
docs/: release_note.md
docs/plans/: 2026-04-18-agents-manager-registry-redesign-design.md  2026-04-18-agents-manager-registry-redesign.md  2026-04-18-desktop-ui-polish-design.md  2026-04-18-desktop-ui-polish.md  2026-04-18-editor-workbench-skill-creation-design.md  2026-04-18-editor-workbench-skill-creation.md  2026-04-20-desktop-shell-skills-realignment-design.md  2026-04-20-desktop-shell-skills-realignment.md  2026-04-20-memory-sidebar-design.md
