[package]
name = "agents_manager_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agents-manager"
path = "src/main.rs"

[dependencies]
agents_manager_core = { path = "../agents_manager_core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
