[package]
name = "agents_manager_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for agents-manager: skill library, profiles, apply, doctor"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "1"
dirs = "5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[dev-dependencies]
